# Stoat.py

./: .gitignore  LICENSE  README.md
src/: pyproject.toml
src/stoat_py/: __init__.py
src/stoat_py/classes/: Channel.py  Client.py  Message.py  __init__.py
src/stoat_py/utils/: errors.py  heartbeat.py  request_handler.py
tests/: client_test.py
