[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "Stoat.py"
version = "0.0.1"
authors = [
  { name="Logan Paxton", email="loganpaxton@loganpaxton.tech" },
]
description = "Stoat / Revolt API ported to Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/LoganPaxton/Stoat.py"
Issues = "https://github.com/LoganPaxton/Stoat.py/issues"